@@ -2,6 +2,7 @@ version 0.99.0-rc - XX-mmm-2010
  . Configuration: and objects that knows GL capabilities and other misc stuff (issue #712)
  . Director/Particles/Grid: removed hardcoded display size values. Using variable (issue #XXX)
  . Director: send "cleanup" message to root scene when it is being replaced (issue #709)
+ . Grid: optimized code. Only call camera.locate if it is dirty (issue #XXX)
  . SpriteSheet: reorder updates descendants. Added test for this case (issue #708)
  . Sprite: can create sprite from SpriteSheet. deprecated creation method from SpriteSheet (issue #657)
  . Sprite: optimized rendering when using spriteSheet and subchildren (issue #XXX)
